force-app/main/default/objects/Installation_Line__c/Installation_Line__c.object-meta.xml
<CustomObject>
    <label>Installation Line</label>
    <nameField>
        <label>Installation Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>