force-app/main/default/objects/Installation_Line__c/fields/Change_Action__c.field-meta.xml
<CustomField>
    <fullName>Change_Action__c</fullName>
    <label>Change Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Add Product</fullName>
            </value>
            <value>
                <fullName>Remove Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>