force-app/main/default/objects/Installation_Line__c/fields/Current_Installation_Line__c.field-meta.xml
<CustomField>
    <fullName>Current_Installation_Line__c</fullName>
    <formula>Start_Date__c &lt; TODAY() &amp;&amp;  End_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Installation Line</label>
    <type>Checkbox</type>
</CustomField>