force-app/main/default/objects/Installation_Line__c/fields/Implementation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completed_Date__c</fullName>
    <label>Implementation Completed Date</label>
    <type>Date</type>
</CustomField>