force-app/main/default/objects/Installation_Line__c/fields/Implemented_By__c.field-meta.xml
<CustomField>
    <fullName>Implemented_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implemented By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Implemented Installation Lines</relationshipLabel>
    <relationshipName>Implemented_Installation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>