force-app/main/default/objects/Installation_Line__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Installation Lines</relationshipLabel>
    <relationshipName>Installation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>