force-app/main/default/objects/Installation_Line__c/fields/Source_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Service Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Order Installation Lines</relationshipLabel>
    <relationshipName>Service_Order_Installation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>