force-app/main/default/objects/Installation_Line__c/fields/Source_Subscription_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Subscription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Subscription Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Subscription Order Installation Lines</relationshipLabel>
    <relationshipName>Subscription_Order_Installation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>