force-app/main/default/objects/Installation_Line__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Installation Lines</relationshipLabel>
    <relationshipName>Installation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>